[package]
name = "httpie"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1" # 错误处理
clap = { version = "3", features = ["derive"] } # 命令行解析
colored = "2" # 终端彩色字体
jsonxf = "1.1" # JSON 格式化
mime = "0.3" # http mime
reqwest = { version = "0.11", features = ["json"] } # HTTP Client
tokio = { version = "1", features = ["full"] } # 异步 io
